# aer-handshake-firmware

./: .gitignore  LICENSE  Makefile  README.md  vhdl_ls.toml
common/: CMakeLists.txt
common/include/: aer_burst.h  aer_cfg.h  aer_codec.h  aer_types.h  log.h  ringbuf.h
common/src/: aer_burst.c  aer_codec.c  ringbuf.c
fake_cam/: cmod_s7_25.tcl
fake_cam/constraints/: async_io.xdc  cmod-s7-25.xdc
fake_cam/hdl/: aer_consumer.vhd  event_encoder.vhd  main.vhd  top_TB.vhd  top_cmod_s7_25.vhd
fake_cam/hdl/ball_bouncer/: ball_bouncer.vhd  ball_bouncer_TB.vhd
fake_cam/hdl/event_gen/: event_gen.vhd  event_gen_TB.vhd
fake_cam/hdl/ip/cmt/: cmt.xci
fake_cam/hdl/ip/fifo_words/: fifo_words.xci
host/: aer_rx_replay.c  aer_tx_model.c  aer_tx_model.h
pico/hal/: hal_gpio.h  hal_stdio.c  hal_stdio.h
pico_aer_rx/: CMakeLists.txt  aer_event_sink.c  aer_event_sink.h  aer_rx_poll.c  aer_rx_poll.h  pico_aer_rx.c  usb_stream.c  usb_stream.h
pico_aer_rx/hal/: hal_gpio.c  hal_time.c  hal_time.h
scripts/: print_events.py  view_events.py
tests/: test_burst.c  test_codec.c  test_replay.c
tests/vectors/: README.txt  codec_invalid.txt  codec_valid.txt
